style: prevent boolean switch from collapsing in propControl flex cell

--- a/src/components/Inspector/InspectorGrid.module.css
+++ b/src/components/Inspector/InspectorGrid.module.css
@@ -112,7 +112,8 @@
 }
 
 .propControl > :global([role="switch"]) {
-  width: auto;
+  width: 36px;
+  flex-shrink: 0;
 }
 
 .propHint {
